force-app/main/default/objects/dupcheck__dcQueue__c/dupcheck__dcQueue__c.object-meta.xml
<CustomObject>
    <description>Hold the records which should be indexed.</description>
    <label>Plauti Deduplicate Queue</label>
    <nameField>
        <displayFormat>DCQ{000000}</displayFormat>
        <label>Plauti Deduplicate Queue</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plauti Deduplicate Queues</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>