force-app/main/default/objects/dupcheck__dcQueue__c/fields/dupcheck__Type__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>index-delete</fullName>
            </value>
            <value>
                <fullName>index-create</fullName>
            </value>
            <value>
                <fullName>record-delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>